<resources>
    <string name="app_name">Fantasy Soccer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="team_list">Team List:</string>
    <string name="member_list">Member List:</string>
    <string name="player">Player:</string>
    <string name="team">Team:</string>
    <string name="speed">Speed:</string>4
    <string name="agility">Agility:</string>
    <string name="power">Power:</string>
    <string name="skill">Skill:</string>
    <string name="find_player">Find\nPlayer</string>
    <string name="create_player">Create\nPlayer</string>
    <string name="create_team">Create Team</string>
    <string name="team_name">Team Name:</string>
</resources>
